Fix: #editorView was invisible

--- a/ide/app/spark_polymer.css
+++ b/ide/app/spark_polymer.css
@@ -54,6 +54,9 @@ body {
 }
 
 #editorArea {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -324,6 +327,7 @@ button.ace_searchbtn_close:active {
   position: absolute;
   top: 48px;
   width: 100%;
+  height: 100%;
 }
 
 #fileViewArea .listview-container {
